codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compact_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 849
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---










• Charging (0s • esc to interrupt)

• Messages to be submitted at end of turn
  ↳ Steer submitted while /compact was running.

› Ask xcodex to do anything

  ? for shortcuts · gpt-5.3-codex                            100% context left
