codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 1774
expression: popup
---
  Save logs?

  The following files will be saved locally:
    • xcodex-feedback-<thread-id>.log
    • codex-connectivity-diagnostics.txt

  Connectivity diagnostics
    - Proxy environment variables are set and may affect connectivity.
      - HTTPS_PROXY = hello

› 1. Yes  Save the current xcodex session logs for troubleshooting.
  2. No

  Press enter to confirm or esc to go back
