codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_empty_output.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered_text
---
/mcp

🔌  MCP Tools

  • No MCP servers configured.
    See the ]8;;https://developers.openai.com/codex/mcpMCP docs]8;; to configure them.
